...
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/type_your_message"
            android:background="@drawable/input_background"
...
            android:paddingEnd="16dp"
            android:textSize="13sp"
            android:inputType="textMultiLine"
            android:layout_marginEnd="8dp"/>

        <ImageView
            android:id="@+id/btnSend"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:contentDescription="@string/todo7"
            android:src="@android:drawable/ic_menu_send"
            android:background="@drawable/circle_dark_green"
            android:padding="10dp"/>
...
